--- a/proyectoIntegrador/angular.json
+++ b/proyectoIntegrador/angular.json
@@ -26,6 +26,7 @@
             ],
             "styles": [
               "src/styles.css"
+
             ],
             "scripts": []
           },
@@ -94,5 +95,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "6e5ddadd-dc80-483f-9ed8-730d816b338c"
   }
 }
